--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,21 @@
 <resources>
     <string name="app_name">Ankas</string>
+    <string name="title_activity_category_and_product">CategoryAndProduct</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+    <string name="bottom_description">На официальном сайте компании АНКАС, вы можете приобрести любое оборудование, представленное в каталоге компании. Для каждого товара у нас выгодные цены с максимально точным и подробным описанием, а также полными характеристиками и собственными фотографиями.</string>
+    <string name="telephone_call">+7 (351) 751-40-12 - Оборудование для АЗС,\n
+        нефтебаз, маслосменное;\n
+        +7 (351) 751-40-35 - Горелки и запчасти;\n
+        +7 (351) 750-18-86 - Строительная техника и\n оборудование; Оборудование для автосервиса; Общий отдел продаж; Бытовые насосы; Станки;\n\n
+        Режим работы:\n
+        ПН-ПТ с 09:00 до 20:00</string>
+    <string name="bottom_description1">Продолжая использовать наш сайт, вы даете согласие на обработку файлов Cookies и других данных, в соответствии с Политикой конфиденциальности и Пользовательским соглашением. Вся информация на сайте – собственность ankas.ru. Публикация любой информации с сайта ankas.ru без разрешения запрещена. Информация на сайте ankas.ru не является публичной офертой.</string>
 </resources>
