--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
         Режим работы:\n
         ПН-ПТ с 09:00 до 20:00</string>
     <string name="bottom_description1">Продолжая использовать наш сайт, вы даете согласие на обработку файлов Cookies и других данных, в соответствии с Политикой конфиденциальности и Пользовательским соглашением. Вся информация на сайте – собственность ankas.ru. Публикация любой информации с сайта ankas.ru без разрешения запрещена. Информация на сайте ankas.ru не является публичной офертой.</string>
+    <string name="dialog_request_price">Обращаем ваше внимание, что услуга «Запросить цену» доступна только в рабочие часы компании. Если вы оставили заявку в нерабочее время, она будет обработана в начале следующего рабочего дня.
+        \n\nЗаявка на уведомление не является заказом Нажимая \"Отправить\", я даю согласие на обработку моих персональных данных.</string>
 </resources>
